--- a/Our Team.html
+++ b/Our Team.html
@@ -10,17 +10,17 @@
 <meta name="author" content="Ekalai">
 
 <!-- Favicon -->
-<link rel="apple-touch-icon" sizes="120x120" href="../../assets/img/brand/logo.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../../assets/img/brand/logo.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../../assets/img/brand/logo.png">
+<link rel="apple-touch-icon" sizes="120x120" href=" assets/img/brand/logo.png">
+<link rel="icon" type="image/png" sizes="32x32" href=" assets/img/brand/logo.png">
+<link rel="icon" type="image/png" sizes="16x16" href=" assets/img/brand/logo.png">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="theme-color" content="#ffffff">
 
 <!-- Fontawesome -->
-<link type="text/css" href="../../vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
+<link type="text/css" href=" vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
 
 <!-- Pixel CSS -->
-<link type="text/css" href="../../css/neumorphism.css" rel="stylesheet">
+<link type="text/css" href=" css/neumorphism.css" rel="stylesheet">
 
 <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
 
@@ -30,16 +30,16 @@
     <header class="header-global">
     <nav id="navbar-main" aria-label="Primary navigation" class="navbar navbar-main navbar-expand-lg navbar-theme-primary headroom navbar-light" style="background-color: #white;">
         <div class="container position-relative">
-            <a class="navbar-brand shadow-soft py-2 px-3 rounded border border-light mr-lg-4" href="../../index.html">
-                <img class="navbar-brand-dark" src="../../assets/img/brand/logo.svg" alt="Logo light">
-                <img class="navbar-brand-light" src="../../assets/img/brand/logo.svg" alt="Logo dark">Ekalai
+            <a class="navbar-brand shadow-soft py-2 px-3 rounded border border-light mr-lg-4" href=" index.html">
+                <img class="navbar-brand-dark" src=" assets/img/brand/logo.svg" alt="Logo light">
+                <img class="navbar-brand-light" src=" assets/img/brand/logo.svg" alt="Logo dark">Ekalai
             </a>
             <div class="navbar-collapse collapse" id="navbar_global">
                 <div class="navbar-collapse-header">
                     <div class="row">
                         <div class="col-6 collapse-brand">
-                            <a href="../../index.html" class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
-                                <img src="../../assets/img/brand/logo.svg" alt="Ekalai logo">
+                            <a href=" index.html" class="navbar-brand shadow-soft py-2 px-3 rounded border border-light">
+                                <img src=" assets/img/brand/logo.svg" alt="Ekalai logo">
                             </a>
                         </div>
                         <div class="col-6 collapse-close">
@@ -147,7 +147,7 @@
                         <!-- Profile Card -->
                         <div class="card bg-primary shadow-soft border-light text-center py-4 mb-5">
                             <div class="profile-image shadow-inset border border-light bg-primary rounded-circle p-3 mx-auto">
-                                <img src="../../assets/img/team/profile-picture-1.jpg" class="card-img-top shadow-soft p-2 border border-light rounded-circle" alt="Neil Avatar">
+                                <img src=" assets/img/team/profile-picture-1.jpg" class="card-img-top shadow-soft p-2 border border-light rounded-circle" alt="Neil Avatar">
                             </div>
                             <div class="card-body">
                                 <h3 class="h5 mb-2">Veeramani Soundharapandiyan</h3>
@@ -184,7 +184,7 @@
                         <!-- Profile Card -->
                         <div class="card bg-primary shadow-soft border-light text-center py-4 mb-5">
                             <div class="profile-image shadow-inset border border-light bg-primary rounded-circle p-3 mx-auto">
-                                <img src="../../assets/img/team/profile-picture-3.jpg" class="card-img-top shadow-soft p-2 border border-light rounded-circle" alt="Bonnie Avatar">
+                                <img src=" assets/img/team/profile-picture-3.jpg" class="card-img-top shadow-soft p-2 border border-light rounded-circle" alt="Bonnie Avatar">
                             </div>
                             <div class="card-body">
                                 <h3 class="h5 mb-2">Revathy Surenderan</h3>
@@ -220,7 +220,7 @@
                         <!-- Profile Card -->
                         <div class="card bg-primary shadow-soft border-light text-center py-4 mb-5">
                             <div class="profile-image shadow-inset border border-light bg-primary rounded-circle p-3 mx-auto">
-                                <img src="../../assets/img/team/profile-picture-2.jpg" class="card-img-top shadow-soft p-2 border border-light rounded-circle" alt="Christopher avatar">
+                                <img src=" assets/img/team/profile-picture-2.jpg" class="card-img-top shadow-soft p-2 border border-light rounded-circle" alt="Christopher avatar">
                             </div>
                             <div class="card-body">
                                 <h3 class="h5 mb-2">Vetrikumar Palanivel</h3>
@@ -257,7 +257,7 @@
                          <!-- Profile Card -->
                          <div class="card bg-primary shadow-soft border-light text-center py-4 mb-5">
                             <div class="profile-image shadow-inset border border-light bg-primary rounded-circle p-3 mx-auto">
-                                <img src="../../assets/img/team/profile-picture-2.jpg" class="card-img-top shadow-soft p-2 border border-light rounded-circle" alt="Christopher avatar">
+                                <img src=" assets/img/team/profile-picture-2.jpg" class="card-img-top shadow-soft p-2 border border-light rounded-circle" alt="Christopher avatar">
                             </div>
                             <div class="card-body">
                                 <h3 class="h5 mb-2">Surya Vijayan</h3>
@@ -294,7 +294,7 @@
                         <!-- Profile Card -->
                         <div class="card bg-primary shadow-soft border-light text-center py-4 mb-5">
                             <div class="profile-image shadow-inset border border-light bg-primary rounded-circle p-3 mx-auto">
-                                <img src="../../assets/img/team/profile-picture-2.jpg" class="card-img-top shadow-soft p-2 border border-light rounded-circle" alt="Christopher avatar">
+                                <img src=" assets/img/team/profile-picture-2.jpg" class="card-img-top shadow-soft p-2 border border-light rounded-circle" alt="Christopher avatar">
                             </div>
                             <div class="card-body">
                                 <h3 class="h5 mb-2">Nandhakumar Ashokan</h3>
@@ -433,7 +433,7 @@
         <div class="row">
             <div class="col">
                 <a href="" target="_blank" class="d-flex justify-content-center">
-                    <img src="../../assets/img/brand/logo.svg" height="50" class="mb-3" alt="">
+                    <img src=" assets/img/brand/logo.svg" height="50" class="mb-3" alt="">
                 </a>
             <div class="d-flex text-center justify-content-center align-items-center" role="contentinfo">
                 <p class="font-weight-normal font-small mb-0">Copyright © Ekalai
@@ -445,26 +445,26 @@
 </footer>
 
     <!-- Core -->
-<script src="../../vendor/jquery/dist/jquery.min.js"></script>
-<script src="../../vendor/popper.js/dist/umd/popper.min.js"></script>
-<script src="../../vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../../vendor/headroom.js/dist/headroom.min.js"></script>
+<script src=" vendor/jquery/dist/jquery.min.js"></script>
+<script src=" vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src=" vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src=" vendor/headroom.js/dist/headroom.min.js"></script>
 
 <!-- Vendor JS -->
-<script src="../../vendor/onscreen/dist/on-screen.umd.min.js"></script>
-<script src="../../vendor/nouislider/distribute/nouislider.min.js"></script>
-<script src="../../vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
-<script src="../../vendor/waypoints/lib/jquery.waypoints.min.js"></script>
-<script src="../../vendor/jarallax/dist/jarallax.min.js"></script>
-<script src="../../vendor/jquery.counterup/jquery.counterup.min.js"></script>
-<script src="../../vendor/jquery-countdown/dist/jquery.countdown.min.js"></script>
-<script src="../../vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-<script src="../../vendor/prismjs/prism.js"></script>
+<script src=" vendor/onscreen/dist/on-screen.umd.min.js"></script>
+<script src=" vendor/nouislider/distribute/nouislider.min.js"></script>
+<script src=" vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+<script src=" vendor/waypoints/lib/jquery.waypoints.min.js"></script>
+<script src=" vendor/jarallax/dist/jarallax.min.js"></script>
+<script src=" vendor/jquery.counterup/jquery.counterup.min.js"></script>
+<script src=" vendor/jquery-countdown/dist/jquery.countdown.min.js"></script>
+<script src=" vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+<script src=" vendor/prismjs/prism.js"></script>
 
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 
 <!-- Neumorphism JS -->
-<script src="../../assets/js/neumorphism.js"></script>
+<script src=" assets/js/neumorphism.js"></script>
 </body>
 
 </html>
